After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 630423 - request pairing patches
request pairing patches
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2010-09-23 15:06 UTC by Colin Walters
Modified: 2010-09-23 18:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
closure: Add missing JS_EndRequest in error path (932 bytes, patch)
2010-09-23 15:07 UTC, Colin Walters
committed Details | Review
jsapi-util-error: Add missing JS_EndRequest pair (799 bytes, patch)
2010-09-23 15:07 UTC, Colin Walters
committed Details | Review
jsapi-util-string: Add missing JS_EndRequest (829 bytes, patch)
2010-09-23 15:07 UTC, Colin Walters
committed Details | Review

Description Colin Walters 2010-09-23 15:06:54 UTC
Series of bugs found by inspection.
Comment 1 Colin Walters 2010-09-23 15:07:00 UTC
Created attachment 170920 [details] [review]
closure: Add missing JS_EndRequest in error path
Comment 2 Colin Walters 2010-09-23 15:07:02 UTC
Created attachment 170921 [details] [review]
jsapi-util-error: Add missing JS_EndRequest pair

Just found by visual auditing while looking for mismatched pairs.
Comment 3 Colin Walters 2010-09-23 15:07:05 UTC
Created attachment 170922 [details] [review]
jsapi-util-string: Add missing JS_EndRequest

Found by visual inspection.
Comment 4 Owen Taylor 2010-09-23 17:04:11 UTC
Review of attachment 170920 [details] [review]:

LGTM
Comment 5 Owen Taylor 2010-09-23 17:05:07 UTC
Review of attachment 170921 [details] [review]:

Looks good
Comment 6 Owen Taylor 2010-09-23 17:09:11 UTC
Review of attachment 170922 [details] [review]:

Looks good
Comment 7 Colin Walters 2010-09-23 18:22:03 UTC
Attachment 170920 [details] pushed as daa1efb - closure: Add missing JS_EndRequest in error path
Attachment 170921 [details] pushed as 9d77d60 - jsapi-util-error: Add missing JS_EndRequest pair
Attachment 170922 [details] pushed as 315fda1 - jsapi-util-string: Add missing JS_EndRequest