closure: Add missing JS_EndRequest in error path

https://bugzilla.gnome.org/show_bug.cgi?id=630423